--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Mon projet Symfony/Vuejs</title>
-        {{ encore_entry_link_tags('app') }}
+        {# {{ encore_entry_link_tags('app') }} #}
 
-        {{ encore_entry_script_tags('app') }}
+        {# {{ encore_entry_script_tags('app') }} #}
     </head>
     <body>
       <p>HOME PAGE</p>
