--- a/api/templates/resetPassword.html.twig
+++ b/api/templates/resetPassword.html.twig
@@ -1,4 +1,4 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Bonjour, veuillez reinitialiser votre mot de passe!</h1>
 
 <p>
     Vous souhaitez reset votre mot de passe , suivez le lien suivant: <br><br>
